Fix string formatting using String.formatted()